RESOLVED FIXED27614
WebCore/page/Coordinates.cpp does not conform to style standards
https://bugs.webkit.org/show_bug.cgi?id=27614
Summary WebCore/page/Coordinates.cpp does not conform to style standards
Mike Fenton
Reported 2009-07-23 12:09:59 PDT
cpplint reports a number of valid style fixes that should be made to WebCore/page/Coordinates.cpp.
Attachments
Style patch for Coordinates.cpp (1.12 KB, patch)
2009-07-23 12:13 PDT, Mike Fenton
eric: review+
Mike Fenton
Comment 1 2009-07-23 12:13:48 PDT
Created attachment 33351 [details] Style patch for Coordinates.cpp
Eric Seidel (no email)
Comment 2 2009-07-23 23:13:13 PDT
Comment on attachment 33351 [details] Style patch for Coordinates.cpp LGTM.
Adam Barth
Comment 3 2009-07-23 23:56:49 PDT
Will land.
Adam Barth
Comment 4 2009-07-24 00:43:34 PDT
Committing to http://svn.webkit.org/repository/webkit/trunk ... M WebCore/ChangeLog M WebCore/page/Coordinates.cpp Committed r46328 M WebCore/ChangeLog M WebCore/page/Coordinates.cpp r46328 = bbf4d0941d31ab6a7c2f938adbe5d21b26a9b789 (trunk) No changes between current HEAD and refs/remotes/trunk Resetting to the latest refs/remotes/trunk http://trac.webkit.org/changeset/46328
Note You need to log in before you can comment on or make changes to this bug.