2009-07-24  Mike Fenton  <mike.fenton@torchmobile.com>

Reviewed by Eric Seidel.

        Update WebCore/page/DOMSelection.cpp/h to conform to WebKit
        Style Guidelines as identified by cpplint.py.
        https://bugs.webkit.org/show_bug.cgi?id=27614

        * page/DOMSelection.cpp:
        (WebCore::DOMSelection::setBaseAndExtent):
        (WebCore::DOMSelection::modify):
        (WebCore::DOMSelection::addRange):
        (WebCore::DOMSelection::deleteFromDocument):
        * page/DOMSelection.h:

Canonical link: https://commits.webkit.org/37937@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@46327 268f45cc-cd09-0410-ab3c-d52691b4dbfc