WebCore/page/DOMSelection.h
@@ -30,9 +30,9 @@
 #ifndef DOMSelection_h
 #define DOMSelection_h
 
-#include <wtf/RefCounted.h>
 #include <wtf/Forward.h>
 #include <wtf/PassRefPtr.h>
+#include <wtf/RefCounted.h>
 
 namespace WebCore {
 
